gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/test18938a/file.d
version https://git-lfs.github.com/spec/v1
oid sha256:f42deea2647fcfe0f936bb3f45fd36088e04ee547b95d8392e572900c7a8dbb1
size 172
